--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <header id="cabecalho">
       <section><h1 id="titulo">Lessons Learned</h1></section></header>
     <main>
-        <aside id="passagem">
+        <div id="passagem">
           <div class="side">
           <p><img src="image/eu.jpg" alt="Minha Foto" id="minha_foto"></p>
-          <p id="textside"><p><h2 id="title_sobre_meu_aprendizado">Sobre Meu aprendizado</h2></p><p id="sobre_meu_aprendizado"> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
-            </p>
           </div>
-        </aside>
+        </div>
       <section>
         <ol id="licoes_aprendidas"><p><h1>Licoes Aprendidas</h1></p>
           <li>Unix</li>
@@ -45,9 +43,9 @@
         </ul>
       </section>
       <section>
-        <article id="artigo"><h1>Quem me Ensinou?</h1><p>O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.</p>
-        </article>
-        <div id="artigo2"><h1>Meu Aprendizado</h1><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+        <aside class="lado-esquerdo" id="title_sobre_meu_aprendizado"><h2>Sobre Meu aprendizado</h2><p id="sobre_meu_aprendizado">O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.</p>
+        </aside>
+        <div class="lado-direito" id="title_sobre_meu_aprendizado"><h2>Meu Aprendizado</h2><p id="sobre_meu_aprendizado">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
         </div>
       </section>
       <section>
@@ -79,9 +77,9 @@
       </section>
     </main>
   <footer>
-    <div id="foot"><a href=https://matheusjkl1.github.io target="_blank"><img src="image/gh.png" alt="github" id="gitlogo"></a>
+    <nav id="rodape"><a href=https://matheusjkl1.github.io target="_blank"><img src="image/gh.png" alt="github" id="gitlogo"></a>
     <a href=https://www.linkedin.com/in/matheusmendes16/ target="_blank"><img src="image/lk.png" alt="linkedinlogo" id="linkedinlogo"></a>
-    </div>
+    </nav>
   </footer>
   </body>
 </html>
