--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
             <li>React</li>
             <li>Node</li>
         </ul>
+        <articlei>Nesse pouco tempo de trybe, já percebo o quanto eu evoluir. É um 
+            curso bastante desafiador, pós e necessario uma grande demanda de tempo do seu dia dia, mas para 
+            isso temos uma grande equipe de profissionais, que estão quase que vinte quantro horas à disposição
+            para nos ajudar e motivar. A trybe está sendo uma experinecia muito boa, pretendo aproveita ao máxido
+         </article>
         <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=CjwKCAiAnvj9BRA4EiwAuUMDf0Yx__uSRhyFf2ullTXp64HxKy8o68Nh3UFR5EVgLPURCsf8phV94xoCJXoQAvD_BwE"
-            target="_blank" class="link"><h3>Faça parte deste time</h3></a>
+            target="_blank" class="link"><h6>Faça parte deste time</h6></a>
         <footer id="rodape">rodapé</footer>
     </body>
 </html>
