--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             isso temos uma grande equipe de profissionais, que estão quase que vinte quantro horas à disposição
             para nos ajudar e motivar. A trybe está sendo uma experinecia muito boa, pretendo aproveita ao máxido
          </article>
+         <aside>Em menos de um mês de curso ja sou capaz de criar um corpo de site do zero e colocar este site em um repositorio 
+            remoto. Estou muito feliz com meu progresso, é otimista com o fulturo.</aside>
         <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=CjwKCAiAnvj9BRA4EiwAuUMDf0Yx__uSRhyFf2ullTXp64HxKy8o68Nh3UFR5EVgLPURCsf8phV94xoCJXoQAvD_BwE"
             target="_blank" class="link"><h6>Faça parte deste time</h6></a>
         <footer id="rodape">rodapé</footer>
