Structuring the page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,58 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo"></h1>
+    </header>
+    
+    <img id="minha_foto" src="my-picture.jpeg" alt="Jovem sorridente, largo sorriso branco e olhos enrrugados e cabelos negros">
+
+    <section id="listas">
+        <ol id="licoes_aprendidas">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li>10</li>
+        </ol>
+
+        <ul id="licoes_a_aprender">
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+            <li>*</li>
+        </ul>
+    </section>
+
+    <article>
+        <a href="https://www.facebook.com/silveira.jean.9/" target="_blank">
+            Este é meu Facebook, venha me conhecer melhor.
+        </a>
+    </article>
+
+    <aside id="A história até aqui..."></aside>
+
+    <nav>
+        <ul>
+            <li>HOME</li>
+            <li>LISTAS</li>
+            <li>ARTIGO</li>
+            <li>FACEBOOK</li>
+            <li>A HISTÓRIA ATÉ AQUI</li>
+        </ul>
+    </nav>
+
+    <footer id="rodape"></footer>
 </body>
 </html>
