Ajustes visando 90% de Arpovacao

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <header id="cabecalho">
       <section><h1 id="titulo">Lessons Learned</h1></section></header>
     <main>
-        <div id="passagem">
-          <div class="side">
+          <section class="side">
           <p><img src="image/eu.jpg" alt="Minha Foto" id="minha_foto"></p>
-          </div>
-        </div>
+        <div id="textside"><p id="title_side"><h1>Sobre mim</h1></p id="text_side"><p>Nascido e criado na capital do Paraná, Curitiba. Tabalhei por 8 anos na areá de Logística profissão que decidi me formar, formado e buscando novos desafios, me mudei para Santo André-SP e decidi participar de um novo desafio, entrando na Trybe para me tornar um desenvolvedor Web.</p></div>
+          </section>
       <section>
         <ol id="licoes_aprendidas"><p><h1>Licoes Aprendidas</h1></p>
           <li>Unix</li>
@@ -43,10 +42,13 @@
         </ul>
       </section>
       <section>
-        <aside class="lado-esquerdo" id="title_sobre_meu_aprendizado"><h2>Sobre Meu aprendizado</h2><p id="sobre_meu_aprendizado">O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.</p>
+        <article class="lado-esquerdo" id="title_sobre_meu_aprendizado"><h1>Sobre Meu aprendizado</h1>
+          <p class="sobre_meu_aprendizado">O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.
+        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+        </article>
+        <aside class="lado-direito" id="title_sobre_meu_aprendizado"><h1>Meu Aprendizado</h1>
+          <p class="sobre_meu_aprendizado">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
         </aside>
-        <div class="lado-direito" id="title_sobre_meu_aprendizado"><h2>Meu Aprendizado</h2><p id="sobre_meu_aprendizado">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-        </div>
       </section>
       <section>
         <table id="tabela"><p><h1 id="titletable">Quanto eu Aprendi?</h1></p><p><tr>
@@ -76,10 +78,10 @@
         </table>
       </section>
     </main>
-  <footer>
-    <nav id="rodape"><a href=https://matheusjkl1.github.io target="_blank"><img src="image/gh.png" alt="github" id="gitlogo"></a>
+  <footer id="rodape">
+    <div id="foot"><a href=https://matheusjkl1.github.io target="_blank"><img src="image/gh.png" alt="github" id="gitlogo"></a>
     <a href=https://www.linkedin.com/in/matheusmendes16/ target="_blank"><img src="image/lk.png" alt="linkedinlogo" id="linkedinlogo"></a>
-    </nav>
+    </div>
   </footer>
   </body>
 </html>
