--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 </aside>
             </section>
         </div>
+        <table id="tabela">
+            <tr><td>Nome</td> <td>Chrsitopher</td> </tr>
+            <tr><td>Idade</td> <td>20 anos</td></tr>
+            <tr><td>Estado</td> <td>São Paulo</td></tr>
+        </table>
         <footer id="rodape">
             <p id="textrodape">Link para o meu perfil no <a href="https://github.com/ChrisMoura2000" target="_blank">GitHub</a>  </p>
         </footer>
