Alterei o font-size

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </section>
         </div>
         <table id="tabela">
-            <tr><td>Nome</td> <td>Chrsitopher</td> </tr>
+            <tr><td>Nome</td> <td>Christopher</td> </tr>
             <tr><td>Idade</td> <td>20 anos</td></tr>
             <tr><td>Estado</td> <td>São Paulo</td></tr>
         </table>
