--- a/index.html
+++ b/index.html
@@ -7,20 +7,27 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
-        <nav id="nav">
-            <ul>
-                <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
-                <li><a href="https://betrybe.com" target="_blank">Sobre a Trybe</a></li>
-                <li><a href="#rodape">Contato</a></li>
-            </ul>
-        </nav>
+
     </header>
-    <img id="logoTrybe" src="trybeLogo.png" style="width:50px;height:50px">
+    <div>
+        <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
+    </div>
+    <nav id="nav">
+        <ul>
+            <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
+            <li><a href="https://betrybe.com" target="_blank">Sobre a Trybe</a></li>
+            <li><a href="#rodape">Contato</a></li>
+        </ul>
+
+    </nav>
+    <img id="logoTrybe" src="trybeLogo.png" style="width:110px;height:110px">
+
+
     <article>
         <section>
 
@@ -63,26 +70,28 @@
             </section>
         </aside>
         <article>
-            <section>
-                <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão
-                    a muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes
-                    impossiveis agora simples. </p>
-            </section>
-            <section>
-                <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e sempre nao gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
-            </section>
+            <aside id="textos">
+                <section>
+                    <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão
+                        a muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas
+                        antes impossiveis agora simples. </p>
+                </section>
+                <section>
+                    <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e sempre nao gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
+                </section>
+            </aside>
         </article>
         <footer id="rodape">
             <h5>
                 <a href="#foto" title="Voltar ao topo"><img src="backTop.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
-            </h5>
 
-            <h6>
+
+
                 <a href="mailto:bernardosmithstech@gmail.com" target="_blank" title="Enviar email"><img src="mail_send.svg" alt="email do Bernardo" style="width:50px;height:50px"></a>
                 <a href="https://www.instagram.com/bernardosmithjp/" target="_blank"><img src="Instagram.png" title="Visite nosso Instagram" alt="Instagram do Bernardo" style="width:48px;height:48px;"></a>
                 <a href="https://www.linkedin.com/in/bernardosmith/" target="_blank"><img src="linkedin.png" title="Visite nosso LinkedIn" style="width:60px;height:45px;" alt="LinkedIn do Bernardo"></a>
-            </h6>
-            <p>Todo o código foi utilizado com o conhecimento adquirido na <a href="https://betrybe.com" target="_blank">Trybe</a> ou no site <a href="https://w3schools.com">W3 Schools</a></p>
+            </h5>
+            <p id="inforodape">Todo o código foi realizado com o conhecimento adquirido na <a href="https://betrybe.com" target="_blank">Trybe</a> ou no site <a href="https://w3schools.com">W3 Schools</a></p>
         </footer>
 </body>
 
