Ajustes visando 90% de Arpovacao v2

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         </ul>
       </section>
       <section>
-        <article class="lado-esquerdo" id="title_sobre_meu_aprendizado"><h1>Sobre Meu aprendizado</h1>
-          <p class="sobre_meu_aprendizado">O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.
+        <article class="lado-esquerdo" id="sobre_meu_aprendizado"><h1>Sobre Meu aprendizado</h1>
+          <p class="text">O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
         </article>
-        <aside class="lado-direito" id="title_sobre_meu_aprendizado"><h1>Meu Aprendizado</h1>
-          <p class="sobre_meu_aprendizado">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+        <aside class="lado-direito" ><h1>Meu Aprendizado</h1>
+          <p class="text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
         </aside>
       </section>
       <section>
@@ -79,9 +79,9 @@
       </section>
     </main>
   <footer id="rodape">
-    <div id="foot"><a href=https://matheusjkl1.github.io target="_blank"><img src="image/gh.png" alt="github" id="gitlogo"></a>
+    <nav id="foot"><a href=https://matheusjkl1.github.io target="_blank"><img src="image/gh.png" alt="github" id="gitlogo"></a>
     <a href=https://www.linkedin.com/in/matheusmendes16/ target="_blank"><img src="image/lk.png" alt="linkedinlogo" id="linkedinlogo"></a>
-    </div>
+    </nav>
   </footer>
   </body>
 </html>
