--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <section id="conteudo-primario">
         <img id="minha_foto" src="eu.jpeg" alt="Homem sorrindo.">
         <article>
-             <p>Olá me Thiago, tenho 22 anos, e como o titulo diz eis a estrada até aqui
+             Olá me Thiago, tenho 22 anos, e como o titulo diz eis a estrada até aqui
                 minha historia com o desenvolvimento web não é muito longa, conheci esse 
                 mundo da programação ja no final de 2018, onde comecei a estudar sobre logica
                 de programação e algoritmos, através da linguagem de portugol pelo visualg e de
                 la pra venho estudando html, css, JavaScript, e algumas aventuras em Python e Java,
                 até que conheci a Trybe onde venho reforçando alguns conhecimentos e aprendendo muito
-                coisa.
-             </p> 
+                coisa. 
         </article>
     </section>
     
@@ -52,6 +51,7 @@
         <li>Python.</li>
     </ul> 
     
+    <aside>wgruj</aside>
     <a href="" target="_blank">Contato</a>
   <footer id="rodape">Todos os direitos reservados.</footer>  
 </body>
