Ajustes visando 90% de Arpovacao v3

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
           <section class="side">
           <p><img src="image/eu.jpg" alt="Minha Foto" id="minha_foto"></p>
-        <div id="textside"><p id="title_side"><h1>Sobre mim</h1></p id="text_side"><p>Nascido e criado na capital do Paraná, Curitiba. Tabalhei por 8 anos na areá de Logística profissão que decidi me formar, formado e buscando novos desafios, me mudei para Santo André-SP e decidi participar de um novo desafio, entrando na Trybe para me tornar um desenvolvedor Web.</p></div>
+        <section id="textside"><p id="title_side"><h1>Sobre mim</h1></p id="text_side"><p>Nascido e criado na capital do Paraná, Curitiba. Tabalhei por 8 anos na areá de Logística profissão que decidi me formar, formado e buscando novos desafios, me mudei para Santo André-SP e decidi participar de um novo desafio, entrando na Trybe para me tornar um desenvolvedor Web.</p></section>
           </section>
       <section>
         <ol id="licoes_aprendidas"><p><h1>Licoes Aprendidas</h1></p>
@@ -42,12 +42,13 @@
         </ul>
       </section>
       <section>
-        <article class="lado-esquerdo" id="sobre_meu_aprendizado"><h1>Sobre Meu aprendizado</h1>
+        <article class="lado-esquerdo" id="sobre_meu_aprendizado"><h1>Sobre a Trybe</h1>
           <p class="text">O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+        </p>
         </article>
         <aside class="lado-direito" ><h1>Meu Aprendizado</h1>
-          <p class="text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+          <p class="text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+          </p>
         </aside>
       </section>
       <section>
