--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 <body>
     <header id="cabecalho">
-
+        <div>
+            <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
+        </div>
     </header>
-    <div>
-        <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
-    </div>
+
+
+
     <nav id="nav">
         <ul>
             <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
@@ -28,11 +30,7 @@
     <img id="logoTrybe" src="trybeLogo.png" style="width:110px;height:110px">
 
 
-    <article>
-        <section>
-
-        </section>
-
+    <article id="meuAprendizado">
         <section id="foto">
             <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
         </section>
@@ -76,11 +74,12 @@
                         a muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas
                         antes impossiveis agora simples. </p>
                 </section>
-                <section>
-                    <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e sempre nao gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
-                </section>
-            </aside>
         </article>
+        <section id="aprendizado">
+            <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
+        </section>
+        </aside>
+
         <footer id="rodape">
             <h5>
                 <a href="#foto" title="Voltar ao topo"><img src="backTop.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
