--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <body>
         <header id="cabecalho"><h1 id="titulo">Tudo que eu aprendir</h1></header>
         <img id="minha_foto" src="foto/foto-hudson.jpg" alt="foto de hudson carlos no shopping" width="500px">
+        <table>
+            <tr>
+                <th>Nome</th>
+                <th>Idade</th>
+                <th>Cidade</th>
+            </tr>
+            <tr>
+                <td>Hudson</td>
+                <td>  26</td>
+                <td>Mnaus</td>
+            </tr>
+        </table>
         <ol id="licoes_aprendidas">
             <li>Index</li>
             <li>Git</li>
@@ -43,7 +55,7 @@
          <aside>
             <p>
              Em menos de um mês de curso ja sou capaz de criar um corpo de site do zero e colocar este site em um repositorio
-             remoto remoto. Estou muito feliz com meu progresso, é otimista com o fulturo.
+             remoto. Estou muito feliz com meu progresso, é otimista com o fulturo.
             </p>
         </aside>
         <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=CjwKCAiAnvj9BRA4EiwAuUMDf0Yx__uSRhyFf2ullTXp64HxKy8o68Nh3UFR5EVgLPURCsf8phV94xoCJXoQAvD_BwE"
