Nao lembro o que alterei

--- a/index.html
+++ b/index.html
@@ -7,41 +7,55 @@
     <body>
         <header id="cabeçalho">
             <h1>Lições aprendidas - Trybe!</h1>
-            <nav>
-                <ul>
-                    <li> <a href="#">Lições aprendidas</a></li>
-                    <li> <a href="#">Lições futuras</a></li>
-                    <li> <a href="#">O que aprendi na Trybe?</a></li>
-                </ul>
-            </nav>
         </header>
-        <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden" id="minha_foto">
-        <ol id="licoes_aprendidas">
-            <li>a</li>
-            <li>b</li>
-            <li>c</li>
-            <li>d</li>
-            <li>e</li>
-            <li>f</li>
-            <li>g</li>
-            <li>h</li>
-            <li>h</li>
-            <li>h</li>
-        </ol>
-        <section>
-            <h2>Lições que ainda vou aprender</h2>
-            <ul id="licoes_a_aprender">
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
+        <nav>
+            <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden" id="minha_foto">
+            <ul>
+                <li> <a href="#">Lições aprendidas</a></li>
+                <li> <a href="#">Lições futuras</a></li>
+                <li> <a href="#">O que aprendi na Trybe?</a></li>
             </ul>
+        </nav>
+        <section class="aprendizado">
+            <h2>Meu aprendizado na Trybe</h2>
+            <div class="aprendizado_box"><!-- Aprendido -->
+                <h3>O que já aprendi</h3>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Shell Script</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>HTML</li>
+                    <li>HTML Semantico</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                </ol>
+            </div>
+            <div class="aprendizado_box"><!-- Ainda não aprendido -->
+                <h3>Lições que ainda vou aprender</h3>
+                <ul id="licoes_a_aprender">
+                    <li>Lógica de Programação</li>
+                    <li>JavaScript
+                        <ul>
+                            <li>DOM</li>
+                            <li>Eventos</li>
+                            <li>Web Storage</li>
+                            <li>JavaScript ES6</li>
+                            <li>Testes Unitários</li>
+                            <li>Higher Order Functions</li>
+                            <li>JavaScript Assíncrono</li>
+                            <li>Promises</li>
+                        </ul>
+                    </li>
+                    <li>HTML/CSS
+                        <ul>
+                            <li>Forms</li>
+                            <li>Flexbox</li>
+                            <li>Responsivo</li>
+                        </ul>
+            </div>
         </section>
         <a href="https://www.linkedin.com/in/maximilian-kaden-a48bb0a1/" target="_blank">Clique aqui para saber mais</a>
         <article>
@@ -59,3 +73,6 @@
         <footer id="rodape"></footer>
     </body>
 </html>
+
+
+<!-- https://www.youtube.com/watch?v=PwWHL3RyQgk -->
