Ateracao no style2

--- a/index.html
+++ b/index.html
@@ -27,71 +27,71 @@
         </ul>
 
     </nav>
-    <img id="logoTrybe" src="trybeLogo.png" style="width:110px;height:110px">
+    <img id="logoTrybe" src="trybeLogo.png" alt="Logotipo da Trybe" style="width:110px;height:110px">
 
 
+
+    <section id="foto">
+        <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
+    </section>
+
+    <aside id="coluna">
+        <section id="lista1">
+            <h2>Lista das lições já aprendidas</h2>
+            <ol id="licoes_aprendidas">
+                <li>Fundamentos do Desenvolvimento Web</li>
+                <li>Introdução Unix & Shell</li>
+                <li>Conhecimento sobre Unix & Bash</li>
+                <li>Conhecimento sobre a Internet</li>
+                <li>HTML & CSS</li>
+                <li>HTML Semântico</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>Empatia</li>
+                <li>Inspect</li>
+            </ol>
+        </section>
+        <section id="lista2">
+            <h3>Lista das lições que Desejo aprender</h3>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </section>
+    </aside>
     <article id="meuAprendizado">
-        <section id="foto">
-            <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
-        </section>
+        <aside id="textos">
 
-        <aside id="coluna">
-            <section id="lista1">
-                <h2>Lista das lições já aprendidas</h2>
-                <ol id="licoes_aprendidas">
-                    <li>Fundamentos do Desenvolvimento Web</li>
-                    <li>Introdução Unix & Shell</li>
-                    <li>Conhecimento sobre Unix & Bash</li>
-                    <li>Conhecimento sobre a Internet</li>
-                    <li>HTML & CSS</li>
-                    <li>HTML Semântico</li>
-                    <li>Git</li>
-                    <li>Github</li>
-                    <li>Empatia</li>
-                    <li>Inspect</li>
-                </ol>
-            </section>
-            <section id="lista2">
-                <h3>Lista das lições que Desejo aprender</h3>
-                <ul id="licoes_a_aprender">
-                    <li>JavaScript</li>
-                    <li>DOM</li>
-                    <li>Forms</li>
-                    <li>CSS Responsive</li>
-                    <li>ES6</li>
-                    <li>HOF</li>
-                    <li>Unit Tests</li>
-                    <li>React</li>
-                    <li>Node</li>
-                    <li>SQL</li>
-                </ul>
-            </section>
-        </aside>
-        <article>
-            <aside id="textos">
-                <section>
-                    <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão
-                        a muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas
-                        antes impossiveis agora simples. </p>
-                </section>
-        </article>
-        <section id="aprendizado">
-            <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
-        </section>
-        </aside>
+            <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a
+                muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes impossiveis
+                agora simples. </p>
 
-        <footer id="rodape">
-            <h5>
-                <a href="#foto" title="Voltar ao topo"><img src="backTop.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
+    </article>
+    <section id="aprendizado">
+        <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
+    </section>
+    </aside>
+
+    <footer id="rodape">
+        <h4>
+            <a href="#foto" title="Voltar ao topo"><img src="backTop.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
 
 
 
-                <a href="mailto:bernardosmithstech@gmail.com" target="_blank" title="Enviar email"><img src="mail_send.svg" alt="email do Bernardo" style="width:50px;height:50px"></a>
-                <a href="https://www.instagram.com/bernardosmithjp/" target="_blank"><img src="Instagram.png" title="Visite nosso Instagram" alt="Instagram do Bernardo" style="width:48px;height:48px;"></a>
-                <a href="https://www.linkedin.com/in/bernardosmith/" target="_blank"><img src="linkedin.png" title="Visite nosso LinkedIn" style="width:60px;height:45px;" alt="LinkedIn do Bernardo"></a>
-            </h5>
-            <p id="inforodape">Todo o código foi realizado com o conhecimento adquirido na <a href="https://betrybe.com" target="_blank">Trybe</a> ou no site <a href="https://w3schools.com">W3 Schools</a></p>
-        </footer>
+            <a href="mailto:bernardosmithstech@gmail.com" target="_blank" title="Enviar email"><img src="mail_send.svg" alt="email do Bernardo" style="width:50px;height:50px"></a>
+            <a href="https://www.instagram.com/bernardosmithjp/" target="_blank"><img src="Instagram.png" title="Visite nosso Instagram" alt="Instagram do Bernardo" style="width:48px;height:48px;"></a>
+            <a href="https://www.linkedin.com/in/bernardosmith/" target="_blank"><img src="linkedin.png" title="Visite nosso LinkedIn" style="width:60px;height:45px;" alt="LinkedIn do Bernardo"></a>
+        </h4>
+        <p id="inforodape">Todo o código foi realizado com o conhecimento adquirido na <a href="https://betrybe.com" target="_blank">Trybe</a> ou no site <a href="https://w3schools.com">W3 Schools</a></p>
+    </footer>
 </body>
 
 </html>
