Criando seção sobre meu aprendizado.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
         <li>Python.</li>
     </ul> 
     
-    <aside>wgruj</aside>
+    <aside>Na Trybe venho fortalecendo alguns conhecimentos que ja tinha
+            e aprendendo muito mais, mas não so na parte das hard skills, mas 
+            também nas Soft skills, que são muito importantes para varios aspectos
+            da vida.
+    </aside>
     <a href="" target="_blank">Contato</a>
   <footer id="rodape">Todos os direitos reservados.</footer>  
 </body>
