Novas tags html para melhorar o ranquemento do site.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">A estrada até aqui</h1>
+        <nav>
+            <span>Home</span>
+            <span>Contato</span>
+        </nav>
     </header>
     
     <section id="conteudo-primario">
