Ajustes visando 100% de Arpovacao v3

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
           <section class="side">
           <p><img src="image/eu.jpg" alt="Minha Foto" id="minha_foto"></p>
-        <section id="textside"><p id="title_side"><h1>Sobre mim</h1></p id="text_side"><p>Nascido e criado na capital do Paraná, Curitiba. Tabalhei por 8 anos na areá de Logística profissão que decidi me formar, formado e buscando novos desafios, me mudei para Santo André-SP e decidi participar de um novo desafio, entrando na Trybe para me tornar um desenvolvedor Web.</p></section>
+        <section id="textside"><p id="title_side"><h1>Sobre mim</h1></p id="text_side"><p>Nascido e criado na capital do Paraná, Curitiba. Tabalhei por 8 anos na área de Logística profissão que decidi me formar, formado e buscando novos desafios, me mudei para Santo André-SP e decidi participar de um novo desafio, entrando na Trybe para me tornar um desenvolvedor Web.</p></section>
           </section>
       <section>
         <ol id="licoes_aprendidas"><p><h1>Licoes Aprendidas</h1></p>
@@ -47,7 +47,7 @@
         </p>
         </article>
         <aside class="lado-direito"><h1>Meu Aprendizado</h1>
-          <p class="text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+          <p class="text">Estudar na Trybe vem sendo uma experiência maravilhosa, o ensinamento é muito bom, mas o melhor é o cuidado e a atenção com <b>Todos</b> alunos, te deixam sempre a vontade para perguntar.</p>
         </aside>
       </section>
       <section>
