Ajustes visando 100% de Arpovacao v4

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </p>
         </article>
         <aside class="lado-direito"><h1>Meu Aprendizado</h1>
-          <p class="text">Estudar na Trybe vem sendo uma experiência maravilhosa, o ensinamento é muito bom, mas o melhor é o cuidado e a atenção com <b>Todos</b> alunos, te deixam sempre a vontade para perguntar.</p>
+          <p class="text">Estudar na Trybe vem sendo uma experiência maravilhosa, o ensinamento é muito bom, mas o melhor é o cuidado e a atenção com <strong>Todos</strong> alunos, te deixam sempre a vontade para perguntar.</p>
         </aside>
       </section>
       <section>
