--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <article class="lado-direito">
             <h3>Artigo Direito</h3>
             <aside> <h4>Aside</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut tortor scelerisque, facilisis nibh in, ornare enim. Morbi suscipit orci non mattis feugiat. Pellentesque eget orci gravida laoreet.</aside>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fringilla in purus eget sagittis. Fusce id arcu massa. Nullam ultricies tortor at metus faucibus dignissim. In hac habitasse platea dictumst.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fringilla in purus eget sagittis. Fusce id arcu massa. Nullam ultricies tortor at metus faucibus dignissim. In hac habitasse platea dictumst. Aliquam laoreet pretium nisl, ac viverra leo rutrum vel. Nunc bibendum ultricies dui at gravida.
         </article>
     </section>
     <div id="div_table">
