Structuring the page3

--- a/index.html
+++ b/index.html
@@ -8,36 +8,46 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+        <h1 id="titulo">Here willed all started</h1>
     </header>
     <img id="minha_foto" src="my-picture.jpeg" alt="Jovem sorridente, largo sorriso branco e olhos enrrugados e cabelos negros">
 
     <section id="listas">
-        <ol id="licoes_aprendidas">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li>10</li>
-        </ol>
+        <table class="borders-tables">
+            <ol id="licoes_aprendidas">
+                <tr>
+                    <td>
+                        <li>*********1</li>
+                        <li>*********2</li>
+                        <li>*********3</li>
+                        <li>*********4</li>
+                        <li>*********5</li>
+                        <li>*********6</li>
+                        <li>*********7</li>
+                        <li>*********8</li>
+                        <li>*********9</li>
+                        <li>*********10</li></td>
+                </tr>
+            </ol>
+        </table>
+        <table class="borders-tables">
+            <ul id="licoes_a_aprender">
+                <tr>
+                    <td>
+                        <li>*dsaaaaaaaaaaaaaaaaaaa</li>
+                        <li>*sdaaaaaaaaaaadsadsa</li>
+                        <li>*dsaaaaaaaaaaaaaa</li>
+                        <li>*dsaaaaaaaaaaaaaaaa</li>
+                        <li>dsaaaaaaaaaaaaaaa*</li>
+                        <li>*dsaaaaaaaaaaaaaaaaaaaaa</li>
+                        <li>*dassssssssssssssssss</li>
+                        <li>*dasssssssssssssssssssssss</li>
+                        <li>*dsaaaaaaaaaaaaaaaaaaaaaaa</li>
+                        <li>*dsaaaaaaaaaaaaaaaaaa</li></td>
+                </tr>
+            </ul>
+        </table>
 
-        <ul id="licoes_a_aprender">
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-            <li>*</li>
-        </ul>
     </section>
 
     <article>
