--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     <li>XXXXXXXXXX</li>
                 </ol>
             </article>
-            <article>
-                <h3>A Aprender</h3>
-                <ul id="licoes_a_aprender">
+            <article id="licoes_a_aprender">
+                <h3 id="titulo-aprender">A aprender</h3>
+                <ul>
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
@@ -53,7 +53,7 @@
                     <li>XXXXXXXXXX</li>
                 </ul>
             </article>
-            <article>
+            <article class="artigo">
                 <h2>Sobre o aprendizado na Trybe</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
@@ -63,7 +63,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
             </article>
          </section>
-         <aside>
+         <aside class="passagem">
             <h3>Passagem</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
