Criando a tabela do requisito 12

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,10 @@
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">2 SEMANAS DE TRYBE</h1>
-        <h2>Tudo que aprendi até aqui!</h2>
+        <section>
+            <h1 id="titulo">2 SEMANAS DE TRYBE</h1>
+            <h2>Tudo que aprendi até aqui!</h2>
+        </section>
 
         <nav>
             <ul>
@@ -24,7 +26,8 @@
         </nav>
     </header>
     <section>
-        <img id="minha_foto" src="./images/MinhaFoto.jpg" alt="Uma foto preto e branca minha.">
+        <img id="minha_foto" src="./images/MinhaFoto.jpg"
+            alt="Uma foto profissional em preto e branca de Emanoel Cristhian.">
     </section>
 
     <article id="texto">
@@ -70,9 +73,38 @@
         <li>Soft Skils para esse mercado</li>
     </ul>
 
+    <table class="greenTable">
+        <thead>
+            <tr>
+                <th colspan="2">Jornada Trybe</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Fundamentos do Desenvolvimento Web</td>
+                <td>Desenvolvimento Front-end</td>
+            </tr>
+            <tr>
+                <td>Desenvolvimento Back-end</td>
+                <td>Ciência da Computação</td>
+            </tr>
+            <tr>
+                <td colspan="2">Soft Skills</td>
+            </tr>
+            <tr>
+                <td colspan="2">Carreira</td>
+            </tr>
+            <tr>
+                <td colspan="2">Software Engineering - The Real Life</td>
+            </tr>
+            <tr>
+                <td colspan="2">Agile</td>
+            </tr>
+        </tbody>
+    </table>
 
     <footer id="rodape">
-        <h4>Contato</h4>
+        <h3>Contato</h3>
         <ul>
             <li><a href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
             <li><a href="https://github.com/EmanoelCristhian">GitHub</a></li>
