--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header id="cabeçalho">
-            <h1>Lições aprendidas - Trybe!</h1>
+            <h1 id="titulo">Lições aprendidas - Trybe!</h1>
         </header>
         <nav>
             <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden" id="minha_foto">
@@ -65,7 +65,9 @@
         <aside>
             <p>Estou concluindo o meu primeiro mês de estudo na Trybe, já estudei: Unix, Bash, Sheel Script, Git, Git Hub, Internet, HTML, CSS e HTML semático.</p>
         </aside>
-        <footer id="rodape"></footer>
+        <footer id="rodape">
+            <p>Desenvolvido por: Maximilian Kaden</p>
+        </footer>
     </body>
 </html>
 
